--- a/shopping-cart/src/index.css
+++ b/shopping-cart/src/index.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -30,7 +30,7 @@ a:hover {
 
 body {
   margin: 0;
-  /* display: flex; */
+  display: flex;
   min-height: 100vh;
 }
 
@@ -69,4 +69,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
